--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/fleish80/rapid-es6-plurasight/issues"
   },
-  "homepage": "https://github.com/fleish80/rapid-es6-plurasight#readme"
+  "homepage": "https://github.com/fleish80/rapid-es6-plurasight#readme",
+  "dependencies": {
+    "traceur": "github:google/traceur-compiler"
+  }
 }
